test/errors/type/table/remove.yasl
mt.lookup({}, .remove)(1, 2.0)
